# Phonetisaurus

./: CMakeLists.txt
src/include/: PhonetisaurusRex.h  PhonetisaurusScript.h
